--- a/frontend/src/components/MessageArea.css
+++ b/frontend/src/components/MessageArea.css
@@ -10,18 +10,17 @@
 
 .chat-container {
     flex-direction: column;
-    justify-content: flex-end;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    justify-content: flex-start; /* Change to flex-start */
     padding: 0.625em;
     border-radius: 1.25em;
     background-size: cover;
-    flex:1;
     box-shadow: inset 0 0 0.625em rgba(0, 0, 0, 0.1);
-    margin-bottom: 1.25em;
+    margin-bottom: 0; /* Adjusted margin */
     width: 100%;
-    max-height: 60vh;
     background-color: rgba(0,0,0,0.1);
+    position: relative;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .chat-container::-webkit-scrollbar {
@@ -37,4 +36,22 @@
 .chat-container::-webkit-scrollbar-track {
     background-color: var(--chat-bg);
     border-radius: 1.25em;
+}
+@media only screen and (max-width:480px){
+    .chat-container {
+        height: calc(100% - 190px);
+    }
+}
+
+
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+    .chat-container{
+        height: calc(100% - 135px);
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .chat-container{
+        height: calc(100% - 160px);
+    }
 }
