--- a/frontend/src/components/message.css
+++ b/frontend/src/components/message.css
@@ -1,8 +1,23 @@
 .message {
     display: flex;
+    /*width: 100%;*/
+    /*height: 100%;*/
+    flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
-    height: 100%;
+    padding: 0.3125em;
+    margin-bottom: 0.625em;
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(0.625em);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .message.user {
@@ -14,7 +29,7 @@
 }
 
 .message.user .user-text {
-    text-align: left;
+    text-align: right;
     padding: 5px 10px;
     border-radius: 10px;
     background-color: var(--right-msg-bg);
@@ -42,7 +57,6 @@
 
 .message.user {
     align-items: flex-end; /* Align user messages to the right */
-    flex-direction: row-reverse;
 }
 
 .message.user .message-header {
@@ -73,16 +87,14 @@
 
 @media only screen and (max-width: 768px) {
     .message {
-        max-width: 100%;
-    }
-    .message.user .user-text, .message.user.bot-text {
         max-width: 90%;
     }
+
 }
 
 
 @media only screen and (min-width: 768px) {
-    .message.user .user-text, .message.user.bot-text {
+    .message{
         max-width: 70%;
     }
 }
