--- a/frontend/src/styles/chat.css
+++ b/frontend/src/styles/chat.css
@@ -61,14 +61,13 @@ body, html {
 .header {
     background: var(--chat-bg);
     width: 100%;
-    padding: 1.5em;
-    font-size: 1.25rem;
+    margin-left: 0;
+    padding: 0.85em;
+    font-size: 1rem;
     color: var(--text-color);
-
+    background-size: cover;
 }
-
 .chat-wrapper {
-    position: relative;
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -77,7 +76,8 @@ body, html {
     max-width: 37.5em;
     height: 100vh;
     padding: 1.25em;
-    overflow: auto;
+    overflow: hidden;
+    position: relative;
     box-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.2);
     color: var(--text-color)
 }
@@ -92,21 +92,4 @@ body, html {
     border-radius: inherit;
 }
 
-.message {
-    display: flex;
-    flex-direction: column;
-    padding: 0.3125em;
-    margin-bottom: 0.625em;
-    animation: fadeIn 0.3s ease-in-out;
-}
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(0.625em);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
