--- a/frontend/src/components/message.css
+++ b/frontend/src/components/message.css
@@ -1,7 +1,6 @@
 .message {
     display: flex;
-    /*width: 100%;*/
-    /*height: 100%;*/
+    width: 100%;
     flex-direction: column;
     justify-content: flex-start;
     padding: 0.3125em;
@@ -86,7 +85,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .message {
+    .message.bot .bot-text, .message.user .user-text{
         max-width: 90%;
     }
 
@@ -94,7 +93,7 @@
 
 
 @media only screen and (min-width: 768px) {
-    .message{
+    .message.bot .bot-text, .message.user .user-text{
         max-width: 70%;
     }
 }
