--- a/frontend/src/components/chat.css
+++ b/frontend/src/components/chat.css
@@ -85,7 +85,7 @@ body, html {
 .bg {
     width: 100%;
     height: 100%;
-    background-image: url('./citrus.jpg');
+    background-image: url('citrus.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
